--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: "Comic Sans MS", "Comic Sans", "Comic Sans Mono", "Chalkboard",
+  font-family: "Comic Sans MS", "Comic Sans", "Comic Mono", "Chalkboard",
     "Marker Felt", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
