--- a/src/index.css
+++ b/src/index.css
@@ -69,9 +69,8 @@ button:disabled {
 .counter::after {
   content: counter(num);
 }
-
 .odometer.odometer-auto-theme,
-.odometer.odometer-theme-minimal {
+.odometer.odometer-theme-default {
   display: inline-block;
   vertical-align: middle;
   *vertical-align: auto;
@@ -80,7 +79,7 @@ button:disabled {
   position: relative;
 }
 .odometer.odometer-auto-theme .odometer-digit,
-.odometer.odometer-theme-minimal .odometer-digit {
+.odometer.odometer-theme-default .odometer-digit {
   display: inline-block;
   vertical-align: middle;
   *vertical-align: auto;
@@ -89,7 +88,7 @@ button:disabled {
   position: relative;
 }
 .odometer.odometer-auto-theme .odometer-digit .odometer-digit-spacer,
-.odometer.odometer-theme-minimal .odometer-digit .odometer-digit-spacer {
+.odometer.odometer-theme-default .odometer-digit .odometer-digit-spacer {
   display: inline-block;
   vertical-align: middle;
   *vertical-align: auto;
@@ -98,7 +97,7 @@ button:disabled {
   visibility: hidden;
 }
 .odometer.odometer-auto-theme .odometer-digit .odometer-digit-inner,
-.odometer.odometer-theme-minimal .odometer-digit .odometer-digit-inner {
+.odometer.odometer-theme-default .odometer-digit .odometer-digit-inner {
   text-align: left;
   display: block;
   position: absolute;
@@ -109,29 +108,29 @@ button:disabled {
   overflow: hidden;
 }
 .odometer.odometer-auto-theme .odometer-digit .odometer-ribbon,
-.odometer.odometer-theme-minimal .odometer-digit .odometer-ribbon {
+.odometer.odometer-theme-default .odometer-digit .odometer-ribbon {
   display: block;
 }
 .odometer.odometer-auto-theme .odometer-digit .odometer-ribbon-inner,
-.odometer.odometer-theme-minimal .odometer-digit .odometer-ribbon-inner {
+.odometer.odometer-theme-default .odometer-digit .odometer-ribbon-inner {
   display: block;
   -webkit-backface-visibility: hidden;
 }
 .odometer.odometer-auto-theme .odometer-digit .odometer-value,
-.odometer.odometer-theme-minimal .odometer-digit .odometer-value {
+.odometer.odometer-theme-default .odometer-digit .odometer-value {
   display: block;
   -webkit-transform: translateZ(0);
 }
 .odometer.odometer-auto-theme
   .odometer-digit
   .odometer-value.odometer-last-value,
-.odometer.odometer-theme-minimal
+.odometer.odometer-theme-default
   .odometer-digit
   .odometer-value.odometer-last-value {
   position: absolute;
 }
 .odometer.odometer-auto-theme.odometer-animating-up .odometer-ribbon-inner,
-.odometer.odometer-theme-minimal.odometer-animating-up .odometer-ribbon-inner {
+.odometer.odometer-theme-default.odometer-animating-up .odometer-ribbon-inner {
   -webkit-transition: -webkit-transform 2s;
   -moz-transition: -moz-transform 2s;
   -ms-transition: -ms-transform 2s;
@@ -140,7 +139,7 @@ button:disabled {
 }
 .odometer.odometer-auto-theme.odometer-animating-up.odometer-animating
   .odometer-ribbon-inner,
-.odometer.odometer-theme-minimal.odometer-animating-up.odometer-animating
+.odometer.odometer-theme-default.odometer-animating-up.odometer-animating
   .odometer-ribbon-inner {
   -webkit-transform: translateY(-100%);
   -moz-transform: translateY(-100%);
@@ -149,7 +148,7 @@ button:disabled {
   transform: translateY(-100%);
 }
 .odometer.odometer-auto-theme.odometer-animating-down .odometer-ribbon-inner,
-.odometer.odometer-theme-minimal.odometer-animating-down
+.odometer.odometer-theme-default.odometer-animating-down
   .odometer-ribbon-inner {
   -webkit-transform: translateY(-100%);
   -moz-transform: translateY(-100%);
@@ -159,7 +158,7 @@ button:disabled {
 }
 .odometer.odometer-auto-theme.odometer-animating-down.odometer-animating
   .odometer-ribbon-inner,
-.odometer.odometer-theme-minimal.odometer-animating-down.odometer-animating
+.odometer.odometer-theme-default.odometer-animating-down.odometer-animating
   .odometer-ribbon-inner {
   -webkit-transition: -webkit-transform 2s;
   -moz-transition: -moz-transform 2s;
@@ -171,4 +170,14 @@ button:disabled {
   -ms-transform: translateY(0);
   -o-transform: translateY(0);
   transform: translateY(0);
+}
+
+.odometer.odometer-auto-theme,
+.odometer.odometer-theme-default {
+  font-family: "Helvetica Neue", sans-serif;
+  line-height: 1.1em;
+}
+.odometer.odometer-auto-theme .odometer-value,
+.odometer.odometer-theme-default .odometer-value {
+  text-align: center;
 }
