Fix mobile scroll bug

--- a/src/index.css
+++ b/src/index.css
@@ -55,3 +55,8 @@ button:disabled {
     height: -webkit-fill-available;
   }
 }
+
+/* Override to enable scrolling when touching chart on mobile */
+.VictoryContainer {
+  touch-action: auto !important;
+}
