--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,12 @@ button {
   transition: all 0.2s;
   cursor: pointer;
   background-color: transparent;
+
+  /* Disable text select on buttons */
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+/Edge */
+  user-select: none; /* Standard */
 }
 
 button:disabled {
